Source/JavaScriptCore/wasm/WasmFormat.cpp
@@ -31,6 +31,11 @@
 
 #include "WasmMemory.h"
 
+#if COMPILER(GCC) && ASSERT_DISABLED
+#pragma GCC diagnostic push
+#pragma GCC diagnostic ignored "-Wreturn-type"
+#endif // COMPILER(GCC) && ASSERT_DISABLED
+
 namespace JSC { namespace Wasm {
 
 const char* toString(Type type)
@@ -52,5 +57,9 @@ const char* toString(Type type)
 ModuleInformation::~ModuleInformation() { }
 
 } } // namespace JSC::Wasm
+
+#if COMPILER(GCC) && ASSERT_DISABLED
+#pragma GCC diagnostic pop
+#endif // COMPILER(GCC) && ASSERT_DISABLED
 
 #endif // ENABLE(WEBASSEMBLY)
